Refactor out sidebar to includes, add pintrest social media icon, and add Enriqueta font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
         <h1>Kate Guan</h1>
         <h2>MA Student | University of British Columbia</h2>
     </div>
-    <div class="container">
+    <div class="container landing">
         <h3>What is the meaning of life?</h3>
         <h3>How do we live meaningful lives?</h3>
         <h3>How do the relationships we partake in, the moral we believe, and the cultural norms we adopt, help us construct and maintain a sense of meaning?</h3>
