Updating landing and styles

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@ layout: default
 <div class="main">
     <div class="header">
         <h1>Kate Guan</h1>
-        <h2>MA Student | University of British Columbia</h2>
+        <h2>University of British Columbia</h2>
     </div>
     <div class="container landing">
-        <h3>What is the meaning of life?</h3>
-        <h3>How do we live meaningful lives?</h3>
-        <h3>How do the relationships we partake in, the moral we believe, and the cultural norms we adopt, help us construct and maintain a sense of meaning?</h3>
-        <p>I'm a first year master's student in psychology at the University of British Columbia. I work with Dr. Steven Heine, and my research explores the intersections between culture, morality, meaning, and relationships.</p>
-        <p>On this website, I feature my academic work and profile. I also blog regularly on a number of topics spanning personal thoughts to critical explorations of the path to becoming a research psychologist.</p>
+        <div class="image-blurb-container">
+            <div class="image">
+                <img src="/assets/avatar.png">
+            </div>
+            <div class="blurb">
+                <p>
+                    I am a second year master's student in social psychology at the University of British Columbia. I work with Dr. Steven Heine, and I am broadly interested in moral psychology, meaning, and the intersections between the two.
+                </p>
+            </div>
+        </div>
     </div>
 </div>
