--- a/cv/index.html
+++ b/cv/index.html
@@ -38,6 +38,20 @@ layout: default
         </div>
 
         <div class="cv-section">
+                <h4>Teaching and Mentoring Experience</h4>
+                {% for experience in site.data.teaching-and-mentoring %}
+                    <div class="cv-row">
+                        <div class="cv-date">
+                            <p>{{ experience.date }}</p>
+                        </div>
+                        <div class="cv-dated-content">
+                            <p>{{ experience.details }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+
+        <div class="cv-section">
             <h4>Conference Presentations</h4>
             {% for conference in site.data.conferences %}
                 <div class="cv-row">
