Updating CV styles

--- a/cv/index.html
+++ b/cv/index.html
@@ -7,10 +7,10 @@ layout: default
         <h1>CV</h1>
     </div>
     <div class="container cv">
-        <div class="cv-section education">
+        <div class="cv-section">
             <h4>Education</h4>
             {% for education in site.data.education %}
-                <div class="cv-row">
+                <div class="cv-row education">
                     <div class="cv-date">
                         <p>{{ education.date }}</p>
                     </div>
