Adding professional affliations section

--- a/cv/index.html
+++ b/cv/index.html
@@ -74,5 +74,17 @@ layout: default
             {% endfor %}
         </div>
 
+        <div class="cv-section">
+            <h4>Professional Affiliations</h4>
+            <div class="cv-row">
+                <div class="cv-date">
+                    <p>2017 - Present</p>
+                </div>
+                <div class="cv-dated-content">
+                    <p>Society for Personality and Social Psychology</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
