Adding profile pic & updating footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     <div class="container landing">
         <div class="image-blurb-container">
             <div class="image">
-                <img src="/assets/avatar.png">
+                <img src="/assets/profile.jpg">
             </div>
             <div class="blurb">
                 <p>
